--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="gradient-background" id="title">
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-        <div class="col-10 col-sm-8 col-lg-6"> <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid"
+        <div class="col-10 col-sm-8 col-lg-6"> <img src="./iphone.png" class="d-block mx-lg-auto img-fluid"
             alt="dog picture on iphone"  height="200" loading="lazy"> </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
@@ -97,7 +97,7 @@
       <div class="container py-5">
         <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
           TinDog. Woof."</h2>
-        <img class="profile-img mt-5" src="./images/dog-img.jpg" alt="dog image">
+        <img class="profile-img mt-5" src="./dog-img.jpg" alt="dog image">
         <p class="col-lg-8 mx-auto lead mt-2">
           Pebbles, New York
         </p>
@@ -107,16 +107,16 @@
     <div class= "container">
       <div class="row">
         <div class="col-xl-3 col-sm-12">
-          <img src="./images/techcrunch.png" alt="techcrunch logo" height="30">
+          <img src="./techcrunch.png" alt="techcrunch logo" height="30">
         </div>
         <div class="col-xl-3 col-sm-12">
-          <img src="./images/mashable.png" alt="mashable logo" height="30">
+          <img src="./mashable.png" alt="mashable logo" height="30">
         </div>
         <div class="col-xl-3 col-sm-12">
-          <img src="./images/bizinsider.png" alt="bizinsider logo" height="30">
+          <img src="./bizinsider.png" alt="bizinsider logo" height="30">
         </div>
         <div class="col-xl-3 col-sm-12">
-           <img src="./images/tnw.png" alt="tnw logo" height="30">
+           <img src="./tnw.png" alt="tnw logo" height="30">
         </div>
       </div>
     </div>
